@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-10-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-10-14T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-27T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
