@@ -1,3 +1,12 @@
+2023-10-27T16:11:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6669618555 # 1289
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
+* notice: last 14d: unq all: 3 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 680 1071 / 703 1106
+* notice: next accum: outdated-unq outdated-all / unq all: 683 1074 / 703 1107
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-10-13] / [2023-10-27]
+
 2023-10-27T08:11:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6664617307 # 1288
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
